Unsuccessful attempt at making a window

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,10 @@ features = [
     "Win32_Foundation",
     "Win32_Graphics_Gdi",
     "Win32_UI_WindowsAndMessaging",
+    "Win32_Graphics_Direct2D",
+    "Win32_Graphics_Direct2D_Common",
+    "Win32_System_LibraryLoader",
+    "Win32_Graphics_Dxgi_Common",
+    "Foundation_Numerics",
+    "UI",
 ]
